Introduced option window (incomplete)