@@ -1,8 +1,8 @@
-package com.bytedompteur.documentfinder.filewalker.core;
+package com.bytedompteur.documentfinder;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -28,22 +28,36 @@ public class PathUtil {
    *   ]
    * </pre>
    */
-  static Set<Path> removeChildPaths(Collection<Path> list) {
+  public Set<Path> removeChildPaths(Collection<Path> list) {
     Set<Path> result;
     if (nonNull(list) && !list.isEmpty()) {
       List<Path> sortedByNumberOfPathElementsList = list.stream()
         .sorted(Comparator.comparingInt(Path::getNameCount))
-        .collect(Collectors.toList());
+        .toList();
 
       List<Path> copyOfSortedByNumberOfPathElementsList = new LinkedList<>(sortedByNumberOfPathElementsList);
 
-      sortedByNumberOfPathElementsList.forEach(it -> {
-        copyOfSortedByNumberOfPathElementsList.removeIf(next -> !next.equals(it) && next.startsWith(it));
-      });
+      sortedByNumberOfPathElementsList.forEach(it ->
+        copyOfSortedByNumberOfPathElementsList.removeIf(next -> !next.equals(it) && next.startsWith(it))
+      );
       result = new HashSet<>(copyOfSortedByNumberOfPathElementsList);
     } else {
       result = Set.of();
     }
     return result;
+  }
+
+  /**
+   * Tests if the give  string represents an existing directory in the system.
+   *
+   * @return true if the given string is na existing directory, otherwise false.
+   */
+  public boolean isDirectory(String s) {
+    return Optional
+      .ofNullable(s)
+      .filter(it -> !it.isBlank())
+      .map(Path::of)
+      .filter(Files::isDirectory)
+      .isPresent();
   }
 }
